[package]
name = "cardano-c"
version = "0.1.0"
authors = ["Nicolas Di Prima <nicolas.diprima@iohk.io>", "Vincent Hanquez <vincent.hanquez@iohk.io>"]

[lib]
crate-type = ["staticlib", "cdylib" ]

[dependencies]
jni = { version = "0.5.1", optional = true, default-features = false }
cardano = { path = "../cardano" }
cbor_event = { path = "../cbor_event" }
rustc-serialize = "0.3"
serde_json = "1.0"
base64 = "0.9.3"
[features]
default = ["jni"]