[package]
name = "cardano-c"
version = "0.1.0"
authors = ["Nicolas Di Prima <nicolas.diprima@iohk.io>", "Vincent Hanquez <vincent.hanquez@iohk.io>"]

[lib]
crate-type = ["staticlib" ]

[dependencies]
cardano = { path = "../cardano" }
cbor_event = { path = "../cbor_event" }
rustc-serialize = "0.3"
serde_json = "1.0"
base64 = "0.9.3"
